// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a sortable table 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -20,11 +20,13 @@
            colspan="1"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            First Name
-           <span />
+           <span>
+              🔼
+           </span>
          </th>
          <th
            colspan="1"
            style="cursor: pointer;"
            title="Toggle SortBy"
@@ -67,66 +69,66 @@
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
-           firstName: tanner
+           firstName: derek
          </td>
          <td>
-           lastName: linsley
+           lastName: perkins
          </td>
          <td>
-           age: 29
+           age: 40
          </td>
          <td>
-           visits: 100
+           visits: 40
          </td>
          <td>
-           status: In Relationship
+           status: Single
          </td>
          <td>
-           progress: 50
+           progress: 80
          </td>
        </tr>
        <tr>
          <td>
-           firstName: derek
+           firstName: joe
          </td>
          <td>
-           lastName: perkins
+           lastName: bergevin
          </td>
          <td>
-           age: 40
+           age: 45
          </td>
          <td>
-           visits: 40
+           visits: 20
          </td>
          <td>
-           status: Single
+           status: Complicated
          </td>
          <td>
-           progress: 80
+           progress: 10
          </td>
        </tr>
        <tr>
          <td>
-           firstName: joe
+           firstName: tanner
          </td>
          <td>
-           lastName: bergevin
+           lastName: linsley
          </td>
          <td>
-           age: 45
+           age: 29
          </td>
          <td>
-           visits: 20
+           visits: 100
          </td>
          <td>
-           status: Complicated
+           status: In Relationship
          </td>
          <td>
-           progress: 10
+           progress: 50
          </td>
        </tr>
      </tbody>
    </table>
  </DocumentFragment>
`;

exports[`renders a sortable table 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -21,11 +21,11 @@
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            First Name
            <span>
-              🔼
+              🔽
            </span>
          </th>
          <th
            colspan="1"
            style="cursor: pointer;"
@@ -69,26 +69,26 @@
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
-           firstName: derek
+           firstName: tanner
          </td>
          <td>
-           lastName: perkins
+           lastName: linsley
          </td>
          <td>
-           age: 40
+           age: 29
          </td>
          <td>
-           visits: 40
+           visits: 100
          </td>
          <td>
-           status: Single
+           status: In Relationship
          </td>
          <td>
-           progress: 80
+           progress: 50
          </td>
        </tr>
        <tr>
          <td>
            firstName: joe
@@ -109,26 +109,26 @@
            progress: 10
          </td>
        </tr>
        <tr>
          <td>
-           firstName: tanner
+           firstName: derek
          </td>
          <td>
-           lastName: linsley
+           lastName: perkins
          </td>
          <td>
-           age: 29
+           age: 40
          </td>
          <td>
-           visits: 100
+           visits: 40
          </td>
          <td>
-           status: In Relationship
+           status: Single
          </td>
          <td>
-           progress: 50
+           progress: 80
          </td>
        </tr>
      </tbody>
    </table>
  </DocumentFragment>
`;
